# online_cinema_fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.sample  pyproject.toml
.github/workflows/: main.yml
.local/share/virtualenv/wheel/3.12/image/1/CopyPipInstall/pip-24.3.1-py3-none-any/pip-24.3.1.dist-info/: RECORD
app/: __init__.py  all_models.py  main.py
app/accounts/: email_service.py  models.py  routes.py  schemas.py  tasks.py  test_accounts.py  validators.py
app/cart/: base.py  models.py  routes.py  schemas.py  test.py
app/movies/: models.py  routes.py  schemas.py  test_movies.py
app/orders/: models.py  routes.py  schemas.py
app/payments/: models.py  routes.py  schemas.py  services.py
app/tests/: conftest.py  test_cart.py  test_order.py
core/: celery.py  config.py  database.py  dependencies.py  models.py  utils.py
exceptions/: __init__.py
migrations/: env.py
migrations/versions/: 0b3d73027c2d_.py  278c3dc082ee_.py  73dced7c42c8_.py  89085c102a90_initial_migration.py  f52291af963a_.py
security/: token_manager.py
